@@ -31,7 +31,7 @@ cdef extern from "gdal.h" nogil:
 
 
 cdef int io_band(GDALRasterBandH band, int mode, float x0, float y0,
-                 float width, float height, object data, int resampling=0):
+                 float width, float height, object data, int resampling=0) except -1:
     """Read or write a region of data for the band.
 
     Implicit are
@@ -78,7 +78,7 @@ cdef int io_band(GDALRasterBandH band, int mode, float x0, float y0,
 
 cdef int io_multi_band(GDALDatasetH hds, int mode, float x0, float y0,
                        float width, float height, object data,
-                       long[:] indexes, int resampling=0):
+                       Py_ssize_t[:] indexes, int resampling=0) except -1:
     """Read or write a region of data for multiple bands.
 
     Implicit are
@@ -120,7 +120,7 @@ cdef int io_multi_band(GDALDatasetH hds, int mode, float x0, float y0,
     with nogil:
         bandmap = <int *>CPLMalloc(count*sizeof(int))
         for i in range(count):
-            bandmap[i] = indexes[i]
+            bandmap[i] = <int>indexes[i]
         retval = GDALDatasetRasterIOEx(
             hds, <GDALRWFlag>mode, xoff, yoff, xsize, ysize, buf,
             bufxsize, bufysize, buftype, count, bandmap,
@@ -132,7 +132,7 @@ cdef int io_multi_band(GDALDatasetH hds, int mode, float x0, float y0,
 
 cdef int io_multi_mask(GDALDatasetH hds, int mode, float x0, float y0,
                        float width, float height, object data,
-                       long[:] indexes, int resampling=0):
+                       Py_ssize_t[:] indexes, int resampling=0) except -1:
     """Read or write a region of data for multiple band masks.
 
     Implicit are
@@ -173,7 +173,7 @@ cdef int io_multi_mask(GDALDatasetH hds, int mode, float x0, float y0,
     extras.pProgressData = NULL
 
     for i in range(count):
-        j = indexes[i]
+        j = <int>indexes[i]
         band = GDALGetRasterBand(hds, j)
         if band == NULL:
             raise ValueError("Null band")
